# Athena

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
athena/: __init__.py  __main__.py  cli.py
athena/core/: __init__.py  orchestrator.py  session.py
athena/memory/: __init__.py  store.py
athena/tools/: __init__.py  apps_tool.py  base.py  report_tool.py  saoirse_tool.py  sionnach_tool.py
athena/transports/: __init__.py  anthropic.py  base.py  offline.py  openai_compat.py  registry.py
tests/: test_apps_tool.py  test_orchestrator_offline.py  test_registry.py  test_report_tool.py  test_saoirse_tool.py  test_sionnach_tool.py  test_transports.py
